skill-container 추가

--- a/index.html
+++ b/index.html
@@ -47,10 +47,17 @@
     />
 
     <!-- https://fontawesome.com/start -->
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/f1def33959.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- Spoca Han Sans Neo: https://spoqa.github.io/spoqa-han-sans/ko-KR/ -->
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
@@ -88,6 +95,192 @@
               <br />확연히 다른 좋은 강의를 만듭니다.
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="inner">
+        <div class="skill-container">
+          <div class="skill">
+            <i class="fa-brands fa-python skill-icon python-style"></i>
+            <div class="skill-title">
+              <div class="skill-name">업무 자동화</div>
+              <div class="skill-usage">크롤링/자동매매</div>
+            </div>
+          </div>
+          <div class="skill">
+            <i class="fa-brands fa-vuejs skill-icon vue-style"></i>
+            <div class="skill-title">
+              <div class="skill-name">풀스택</div>
+              <div class="skill-usage">웹/앱 서비스</div>
+            </div>
+          </div>
+          <div class="skill">
+            <i class="fa-solid fa-chart-bar skill-icon analysis-style"></i>
+            <div class="skill-title">
+              <div class="skill-name">데이터 분석</div>
+              <div class="skill-usage">데이터 분석/SQL</div>
+            </div>
+          </div>
+          <div class="skill">
+            <i class="fa-solid fa-paper-plane skill-icon ai-style"></i>
+            <div class="skill-title">
+              <div class="skill-name">AI</div>
+              <div class="skill-usage">인공지능 활용</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="inner">
+        <div class="roadmap-container">
+          <div class="roadmap-title-contaner">
+            <div class="roadmap-title">잔재미코딩 관련 블로그 및 서적</div>
+            <div class="arrow-container">
+              <i class="fa-solid fa-circle-arrow-left slide-prev"></i>
+              <i class="fa-solid fa-circle-arrow-right slide-next"></i>
+            </div>
+          </div>
+          <ul class="class-list">
+            <li class="class-card">
+              <img
+                src="./imgaes/BeginCodingMainSize.jpeg"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <div class="class-format">블로그</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    IT는 배우는 방법을 익혀야합니다.
+                  </div>
+                  <div class="class-detail">비전공자가 IT를 배우는 전략</div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/blog.jpeg"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <div class="class-format">블로그</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    네카라쿠배와 좋은 개발자가 되는 팁!
+                  </div>
+                  <div class="class-detail">
+                    좋은 개발자가 되고자 하는분들을 위한 스토리
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/coding.gif"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <div class="class-format">블로그</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">Top-Down으로 쉽게 익히는 IT기술</div>
+                  <div class="class-detail">
+                    비전공와 입문자가 IT를 익히는 전략
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/database.jpeg"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <div class="class-format">블로그</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">뼛속까지 문과생이 빅데이터 개발</div>
+                  <div class="class-detail">
+                    비전공자와 입문자가 IT와 프로그래밍을 익히는 전략
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/newcommer.png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <div class="class-format">블로그</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    블로그를 시작하며 - 도커?와 블로그
+                  </div>
+                  <div class="class-detail">잔재미코딩 블로그 소개</div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/OOPTech.jpeg"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <div class="class-format">블로그</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    혹시 IT를 배워봤는데, 잘안된다면??
+                  </div>
+                  <div class="class-detail">
+                    혹시? 유튜브나 다른 강의를 한번 들어봐도 어렵다면?
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/SWTech.jpeg"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <div class="class-format">블로그</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    IT는 배우는 방법을 익혀야합니다.
+                  </div>
+                  <div class="class-detail">비전공자가 IT를 배우는 전략</div>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
