--- a/index.html
+++ b/index.html
@@ -284,6 +284,457 @@
         </div>
       </div>
     </section>
+    <!-- 두번째 메인 이지 -->
+    <section>
+      <div class="inner">
+        <div class="roadmap-container">
+          <div class="roadmap-title-contaner">
+            <div class="roadmap-title">
+              <a href="https://www.inflearn.com/roadmaps/66"
+                >데이터 분석/과학 로드맵</a
+              >
+            </div>
+            <div class="arrow-container">
+              <i class="fa-solid fa-circle-arrow-left slide-prev"></i>
+              <i class="fa-solid fa-circle-arrow-right slide-next"></i>
+            </div>
+          </div>
+          <ul class="class-list">
+            <li class="class-card">
+              <img
+                src="./imgaes/ljh_python (1).png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">파이썬/크롤링</div>
+                  <div class="class-format">온라인 강의</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    파이썬 입문과 크롤링 기초 부트캠프
+                  </div>
+                  <div class="class-detail">
+                    프로그래밍과 파이썬 기초 및 데이터를 프로그래밍으로 다루기
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/328015-eng.png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">크롤링 중급</div>
+                  <div class="class-format">온라인 강의</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    쉽게 처음하는 파이썬 고급 크롤링
+                  </div>
+                  <div class="class-detail">
+                    파이썬과 Sellnium ,Headless<br />
+                    Chrome,Scrapy 프레임워크 익히기
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/mysql_python (1).png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">MySQL/DB</div>
+                  <div class="class-format">온라인 강의</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">SQL/DB(MySQL) 기본과 활용</div>
+                  <div class="class-detail">
+                    데이터를 다루는 데이터베이스 기초와 파이썬 기반 활용
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/pandas.png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">Pandas/Plotly</div>
+                  <div class="class-format">온라인 강의</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">처음하는 파이썬 데이터 분석</div>
+                  <div class="class-detail">
+                    데이터의 전처리부터 pandas,plotly(시각화),분석 이론까지
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/327464-eng.png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">머신러닝</div>
+                  <div class="class-format">온라인 강의</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    처음하는 파이썬 머신러닝 부트캠프
+                  </div>
+                  <div class="class-detail">
+                    쉽게! 케글 문제와 함께 분류,회귀,군집화 익히기
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/photodune-4161018-group-of-students-m.jpeg"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">인공지능</div>
+                  <div class="class-format">온라인 강의</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    처음하는 Pytorch 인공지능 부트캠프
+                  </div>
+                  <div class="class-detail">
+                    쉽게! 실제 유용한 기능 구현해보며 최신 인공지능 기능 익히기
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-- 세번쨰 메인 이지 -->
+    <section>
+      <div class="inner">
+        <div class="roadmap-container">
+          <div class="roadmap-title-contaner">
+            <div class="roadmap-title">
+              <a href="https://www.inflearn.com/roadmaps/49"
+                >웹/앱서비스 풀스택 로드맵</a
+              >
+            </div>
+            <div class="arrow-container">
+              <i class="fa-solid fa-circle-arrow-left slide-prev"></i>
+              <i class="fa-solid fa-circle-arrow-right slide-next"></i>
+            </div>
+          </div>
+          <ul class="class-list">
+            <li class="class-card">
+              <img
+                src="./imgaes/ljh_python (1).png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">파이썬/크롤링</div>
+                  <div class="class-format">온라인 강의</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    파이썬 입문과 크롤링 기초 부트캠프
+                  </div>
+                  <div class="class-detail">
+                    프로그래밍과 파이썬 기초 및 데이터를 프로그래밍으로 다루기
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/mysql_python (1).png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">MYSQL/DB</div>
+                  <div class="class-format">온라인 강의</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">SQL/DB(MYSQL)기본과 활용</div>
+                  <div class="class-detail">
+                    데이터를 다루는 데이터베이스 기초와 파이썬 기반 활용
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/mongodb_python (1).png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">몽고DB>NoSQL</div>
+                  <div class="class-format">온라인 강의</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">NoSQL DB(몽고DB) 기본과 활용</div>
+                  <div class="class-detail">
+                    빅데이터를 위한 NoSQL 데이터베이스 기초와 파이썬 기반 활용
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/fullstack_part1.png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">flask/백엔드</div>
+                  <div class="class-format">온라인 강의</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">파이썬 백엔드와 웹기술 기본</div>
+                  <div class="class-detail">
+                    flask 기반 백엔드 기본과 HTTP프로토콜, 파이썬 중급 기술
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/fullstack_part2.png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">JS/프론트엔드</div>
+                  <div class="class-format">온라인 강의</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">풀스택을 위한 프론트엔드 기본</div>
+                  <div class="class-detail">
+                    모던 웹서비스를 위한 HTML/CSS/JS+ES6
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/fullstack_part3.png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">도커/배포</div>
+                  <div class="class-format">온라인 강의</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    풀스택을 위한 서버 기술과 도커 기본
+                  </div>
+                  <div class="class-detail">
+                    도커,리눅스,AWS,nginx,HTTPS,flaks 배포 기본
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-- 네번째 메인 이지 -->
+    <section>
+      <div class="inner">
+        <div class="roadmap-container">
+          <div class="roadmap-title-contaner">
+            <div class="roadmap-title">
+              <a href="https://www.inflearn.com/roadmaps/49"
+                >직장인을 위한 기초부터 활용 압출 과정</a
+              >
+            </div>
+            <!-- <div class="arrow-container">
+              <i class="fa-solid fa-circle-arrow-left slide-prev"></i>
+              <i class="fa-solid fa-circle-arrow-right slide-next"></i>
+            </div> -->
+          </div>
+          <ul class="class-list">
+            <li class="class-card">
+              <img
+                src="./imgaes/class101_data.png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">파이썬</div>
+                  <div class="class-format">온라인 강의</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    파이썬 기초부터 데이터 분석 활용
+                  </div>
+                  <div class="class-detail">
+                    파이썬 기초, SQL,pandas, 시각화와 비트코인, 주식, 부동산까지
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/class101_auto.png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">파이썬</div>
+                  <div class="class-format">온라인 강의</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    파이썬 기초부터 데이터 분석 활용
+                  </div>
+                  <div class="class-detail">
+                    파이썬 기초부터 가장 다양한 자동화 템플릿 코드 활용하기
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-- 서적 페이지 -->
+    <section>
+      <div class="inner">
+        <div class="roadmap-container">
+          <div class="roadmap-title-contaner">
+            <div class="roadmap-title">
+              <a href="https://www.inflearn.com/roadmaps/49">서적</a>
+            </div>
+            <!-- <div class="arrow-container">
+              <i class="fa-solid fa-circle-arrow-left slide-prev"></i>
+              <i class="fa-solid fa-circle-arrow-right slide-next"></i>
+            </div> -->
+          </div>
+          <ul class="class-list">
+            <li class="class-card">
+              <img
+                src="./imgaes/broadIT3.png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">출판서적</div>
+                  <div class="class-format">서적</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    누구나 쓱 읽고, 싹 이해하는 IT핵심 기술 서적
+                  </div>
+                  <div class="class-detail">
+                    입문자를 위한 IT 분야와 핵심 IT 기술 이해하기
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/pythonbook.png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">출판서적</div>
+                  <div class="class-format">서적</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">왕초보를 위한 파이썬</div>
+                  <div class="class-detail">
+                    입문자를 위해 , 파이썬으로 프로그래밍 익히기
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/linuxbook.png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">출판서적</div>
+                  <div class="class-format">서적</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">리눅스 커널 프로그래밍</div>
+                  <div class="class-detail">
+                    고급 개발자를 위한 리눅스 커널 분석과 개발
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img
+                src="./imgaes/linuxbook2.png"
+                alt="잔재미코딩 블로그"
+                class="class-img"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">출판서적</div>
+                  <div class="class-format">서적</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">리눅스 운영 체제의 이해와 개발</div>
+                  <div class="class-detail">
+                    고급 개발자를 위한 리눅스 커널 분석과 개발
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
     <!-- footer -->
+    <footer>
+      <div class="inner">
+        <div class="footer-message">
+          합리적인 분들과 확연히 다른 좋은 IT 강의를 만들 수 있는 선순환
+          시스템을 지향합니다
+        </div>
+        <div class="footer-contact">컨택: S-Mun-Soo</div>
+        <div class="footer-copyright">
+          Copyright 2022.06.02 잔재미코딩 클론 사이트
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
