--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                 <div class="class-desc">
                   <div class="class-title">리눅스 커널 프로그래밍</div>
                   <div class="class-detail">
-                    고급 개발자를 위한 리눅스 커널 분석과 개발
+                    고급 개발자를 위한 리눅스 커널 분석과 개발 역량
                   </div>
                 </div>
               </div>
